--- a/tsumaki-obs/CMakeLists.txt
+++ b/tsumaki-obs/CMakeLists.txt
@@ -5,6 +5,12 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+if(MSVC)
+    add_compile_options("/W3" "$<$<CONFIG:RELEASE>:/O2>")
+else()
+    add_compile_options("-Wall" "$<$<CONFIG:RELEASE>:-O3>")
+endif()
+
 set(CMAKE_CXX_FLAGS "-Wall -Wextra -O3")
 
 find_package(OpenMP)
