Add deps and protobufs

--- a/tsumaki-obs/CMakeLists.txt
+++ b/tsumaki-obs/CMakeLists.txt
@@ -8,10 +8,9 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 if(MSVC)
     add_compile_options("/W3" "$<$<CONFIG:RELEASE>:/O2>")
 else()
-    add_compile_options("-Wall" "$<$<CONFIG:RELEASE>:-O3>")
+    set(CMAKE_CXX_FLAGS "-Wall -Wextra -O3")
 endif()
 
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -O3")
 
 find_package(OpenMP)
 if (OPENMP_FOUND)
@@ -20,6 +19,7 @@ if (OPENMP_FOUND)
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
+file(GLOB tsumaki_PROTOBUF_SOURCES "protobuf/*.cpp")
 
 if(MSVC)
 	set(tsumaki_PLATFORM_DEPS
@@ -30,10 +30,13 @@ set(tsumaki_SOURCES
 	tsumaki-filter.cpp
 	tsumaki-plugin.cpp
     tsumaki-math.cpp
-    image-cvt.cpp)
+    image-cvt.cpp
+    ipc.cpp)
 
 add_library(tsumaki MODULE
-	${tsumaki_SOURCES})
+	${tsumaki_SOURCES}
+    ${tsumaki_PROTOBUF_SOURCES}
+)
 target_link_libraries(tsumaki
 	libobs
 	${tsumaki_PLATFORM_DEPS})
