--- a/tsumaki-obs/CMakeLists.txt
+++ b/tsumaki-obs/CMakeLists.txt
@@ -26,10 +26,7 @@ include_directories(${Protobuf_INCLUDE_DIR})
 
 
 if(MSVC)
-	set(tsumaki_PLATFORM_DEPS
-		w32-pthreads
-		wsock32
-		ws2_32)
+	set(tsumaki_PLATFORM_DEPS w32-pthreads wsock32 ws2_32)
 endif()
 
 
